--- a/styles/nav.css
+++ b/styles/nav.css
@@ -35,6 +35,7 @@ header {
     float: right;
     display: flex;
     gap: 20px;
+    margin: 0;
     
   }
   
@@ -45,6 +46,17 @@ header {
   nav ul li {
     display: inline;
     
+  }
+
+  #navbar {
+    padding: 10px 0px;
+    transition: all 0.3s;
+  }
+
+  #logo {
+    height: 80px;
+    transition: all 0.3s;
+    cursor: pointer;
   }
   
   nav ul li a {
@@ -82,11 +94,11 @@ header {
       width: 100%;
       top: 0;
       left: 0;
-      margin-top: 80px;
+      margin-top: 120px;
       padding-bottom: 20px;
       box-shadow: 0 3px 4px 0 rgba(0,0,0,.2);
       transform: translateY(-350px);
-
+      transition: all 0.3s;
       z-index: 7;
       animation-name: animation1;
       animation-duration: 0.5s;
@@ -104,6 +116,8 @@ header {
 
   .cover#cover {
     display: block;
+    height: 120px;
+    transition: all 0.3s;
   }
   
   @keyframes animation {
